<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/margin_5"
        app:cardElevation="@dimen/margin_5"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="@dimen/margin_400"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:gravity="left|center">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/img_action_type"
                    android:layout_width="@dimen/margin_25"
                    android:layout_height="@dimen/margin_25"
                    app:srcCompat="@drawable/ic_education" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/action_type"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_15"
                    android:gravity="start|center_vertical"
                    android:text="@string/txt_education"
                    android:textColor="@color/colorTextDark"
                    android:textSize="@dimen/txt_size_18"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:id="@+id/divider_2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:background="@color/translucentBlack" />

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_15"
                    android:layout_marginRight="@dimen/margin_15"
                    android:layout_marginTop="@dimen/margin_10"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_institute" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/input_institute"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_institute"
                        android:imeOptions="actionNext" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_year" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/input_start_year"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_year"
                            android:imeOptions="actionNext"
                            android:inputType="number" />

                        <View
                            android:layout_width="@dimen/margin_10"
                            android:layout_height="@dimen/margin_2"
                            android:layout_gravity="center_vertical"
                            android:background="@color/translucentBlack" />

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/input_end_year"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_year"
                            android:imeOptions="actionNext"
                            android:inputType="number" />

                    </LinearLayout>

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_degree" />

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_degree"
                        android:imeOptions="actionDone" />

                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>